--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 			<div class="row">
 
-				<div class="col-2 ">
+				<div id="etiquetas" class="col-2 ">
 					<ul>
 						<li>Prework</li>
 						<li>Quiz</li>
